--- a/style.css
+++ b/style.css
@@ -1,34 +1,103 @@
-body{
-    margin: 0;
-    padding: 0;
-    background: url(backimg.jpg);
-    background-size: cover; 
-    
+body {
+  margin: 0;
+  padding: 0;
+  background: url(backimg.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
 }
-nav{
-    weight: 100%; 
-    background-color: black;
-    overflow: auto;
+
+nav {
+  weight: 100%;
+  overflow: auto;
+  background-color: black;
 }
-ul{
-    padding: 0;
-    margin: 0 0 0 450px;
-    list-style: none;
+ul {
+  padding: 0;
+  margin-top: 0%;
+  margin-bottom: 0%;
+  margin-right: 0%;
+  margin-left: 470px;
+  list-style: none;
 }
-li{
-    float: left;
+li {
+  float: left;
 }
-.logo img{
-    position: absolute;
-    margin-top: 15px;
-    margin-left: 10px;
+.logo img {
+  position: absolute;
+  margin-top: 12px;
+  margin-left: 32px;
 }
-nav a{
-    weight: 100px;
-    display: block; 
-    padding: 20px 15px;
-    text-decoration: none;
-    font-family: Arial;
-    color: #f2f2f2;
+nav a {
+  weight: 100px;
+  display: block;
+  padding: 20px 15px;
+  text-decoration: none;
+  font-family: Arial;
+  font-weight: bolder;
+  color: #f2f2f2;
+  text-align: center;
+}
+
+nav ul li:hover {
+  background-color: red;
+  text-color: black;
+  transition: 0.6s all ease;
+}
+
+a.active {
+  background-color: red;
+  text-color: black;
+}
+
+.serach {
+  float: right;
+  color: white;
+}
+
+.welcome {
+  position: absolute;
+  top: 27%;
+  left: 20%;
+  transform: translate(-50%-50%);
+  color: white;
+  text-align: center;
+}
+
+.welcome h1 {
+  font-size: 50px;
+  line-height: 1.2;
+}
+
+span{
+    letter-spacing: 2px;
+    color: red;
+}
+
+.welcome p {
+  font-size: 18px;
+}
+
+button {
+  padding: 6px 16px;
+  background: none;
+  border: 1.5px solid #f2f2f2;
+  border-radius: 8px;
+  color: #f2f2f2;
+  font-size: larger;
+  transition: 0.5s all ease;
+}
+
+button:hover {
+  background-color: rgb(255, 1, 1);
+  color: #ffffff;
+}
+
+.overlay{
+    background: rgba(0, 0, 0, 0.6);
+    height: 100vh;
+}
+
+.m{
+    color: white;
     text-align: center;
 }
